homework-5-jdbc else upd